--- a/app/views/home/services.html.haml
+++ b/app/views/home/services.html.haml
@@ -76,4 +76,6 @@
       %h5 RUBY ON RAILS
       %p
         We focus on lean startup tactics, helping you get to your Minimum Viable Product (MVP) in a timely, cost-effective manner. We understand that as your business develops, requirements can change drastically, so we develop in a transparent, agile manner to ensure that you always have a good grasp of the project timelines and budgets.
-  
+
+
+= render 'get_a_proposal'
