added the rest of icons

--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -149,6 +149,25 @@ background-position-y:-350px;
 .process-icon {
 background-position-y:-280px;
 }
+.agile-icon {
+background-position-y:-490px;
+}
+.ruby-icon {
+background-position-y:-560px;
+}
+.test-driven-icon {
+background-position-y:-630px;
+}
+.design-small-icon {
+background-position-y:-770px;
+}
+
+.global-icon {
+background-position-y:-770px;
+}
+.access-icon {
+background-position-y:-840px;
+}
 
 
 .get-a-proposal {
