--- a/app/views/home/services.html.haml
+++ b/app/views/home/services.html.haml
@@ -30,6 +30,8 @@
   .row
     .two.columns.mobile-one
       %a.circle
+        .icon.agile-icon
+
     .ten.columns.mobile-three
       %h5 RUBY ON RAILS
       %p
@@ -37,6 +39,7 @@
   .row
     .two.columns.mobile-one
       %a.circle
+        .icon.ruby-icon
     .ten.columns.mobile-three
       %h5 RUBY ON RAILS
       %p
@@ -44,6 +47,7 @@
   .row
     .two.columns.mobile-one
       %a.circle
+        .icon.test-driven-icon
     .ten.columns.mobile-three
       %h5 RUBY ON RAILS
       %p
@@ -58,6 +62,7 @@
   .row
     .two.columns.mobile-one
       %a.circle
+        .icon.design-small-icon
     .ten.columns.mobile-three
       %h5 RUBY ON RAILS
       %p
@@ -65,6 +70,7 @@
   .row
     .two.columns.mobile-one
       %a.circle
+        .icon.global-icon
     .ten.columns.mobile-three
       %h5 RUBY ON RAILS
       %p
@@ -72,6 +78,7 @@
   .row
     .two.columns.mobile-one
       %a.circle
+        .icon.access-icon
     .ten.columns.mobile-three
       %h5 RUBY ON RAILS
       %p
