--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,6 @@
-
+%a.jobs{:href => '#', 'data-reveal-id' => 'jobs'}
+  CAREERS
+  
 .logo-banner
   %a#logo{:href => root_path}
 
@@ -14,3 +16,7 @@
   = tab_to "OUR SERVICES", services_path
   = tab_to "OUR BLOG", blog_posts_path
   = tab_to "CONTACT US", contact_path
+  
+  
+  
+=render 'jobs/jobs'
