--- a/app/views/home/services.html.haml
+++ b/app/views/home/services.html.haml
@@ -33,25 +33,28 @@
         .icon.agile-icon
 
     .ten.columns.mobile-three
-      %h5 RUBY ON RAILS
-      %p
-        We focus on lean startup tactics, helping you get to your Minimum Viable Product (MVP) in a timely, cost-effective manner. We understand that as your business develops, requirements can change drastically, so we develop in a transparent, agile manner to ensure that you always have a good grasp of the project timelines and budgets.
+      %h5{editable(1)}
+        =content(1)
+      %p{editable(2)}
+        =content(2)
   .row
     .two.columns.mobile-one
       %a.circle
         .icon.ruby-icon
     .ten.columns.mobile-three
-      %h5 RUBY ON RAILS
-      %p
-        We focus on lean startup tactics, helping you get to your Minimum Viable Product (MVP) in a timely, cost-effective manner. We understand that as your business develops, requirements can change drastically, so we develop in a transparent, agile manner to ensure that you always have a good grasp of the project timelines and budgets.
+      %h5{editable(3)}
+        =content(3)
+      %p{editable(4)}
+        =content(4)
   .row
     .two.columns.mobile-one
       %a.circle
         .icon.test-driven-icon
     .ten.columns.mobile-three
-      %h5 RUBY ON RAILS
-      %p
-        We focus on lean startup tactics, helping you get to your Minimum Viable Product (MVP) in a timely, cost-effective manner. We understand that as your business develops, requirements can change drastically, so we develop in a transparent, agile manner to ensure that you always have a good grasp of the project timelines and budgets.
+      %h5{editable(5)}
+        =content(5)
+      %p{editable(6)}
+        =content(6)
     
 
 .row
@@ -64,25 +67,31 @@
       %a.circle
         .icon.design-small-icon
     .ten.columns.mobile-three
-      %h5 RUBY ON RAILS
-      %p
-        We focus on lean startup tactics, helping you get to your Minimum Viable Product (MVP) in a timely, cost-effective manner. We understand that as your business develops, requirements can change drastically, so we develop in a transparent, agile manner to ensure that you always have a good grasp of the project timelines and budgets.
+      %h5{editable(7)}
+        =content(7)      
+      %p{editable(8)}
+        =content(8)
   .row
     .two.columns.mobile-one
       %a.circle
         .icon.global-icon
     .ten.columns.mobile-three
-      %h5 RUBY ON RAILS
-      %p
-        We focus on lean startup tactics, helping you get to your Minimum Viable Product (MVP) in a timely, cost-effective manner. We understand that as your business develops, requirements can change drastically, so we develop in a transparent, agile manner to ensure that you always have a good grasp of the project timelines and budgets.
+      %h5{editable(9)}
+        =content(9)      
+      %p{editable(10)}
+        =content(10)
   .row
     .two.columns.mobile-one
       %a.circle
         .icon.access-icon
     .ten.columns.mobile-three
-      %h5 RUBY ON RAILS
-      %p
-        We focus on lean startup tactics, helping you get to your Minimum Viable Product (MVP) in a timely, cost-effective manner. We understand that as your business develops, requirements can change drastically, so we develop in a transparent, agile manner to ensure that you always have a good grasp of the project timelines and budgets.
+      %h5{editable(11)}
+        =content(11)
+      %p{editable(12)}
+        =content(12)
 
 
 = render 'get_a_proposal'
+
+
+
