--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -285,3 +285,15 @@ border-top:2px solid #1588C3;
 padding-top:40px;
 
 }
+
+
+.save_button {
+position:fixed;
+top:0px;
+right:0px;
+background:green;
+font-size:20px;
+width:70px;
+height:70px;
+display:none;
+}
