--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -112,6 +112,7 @@ height:700px !important;
 
 #features {
  /* @include w960;*/
+margin-top:50px;
 border-top: 2px solid #1588C3;
 border-bottom: 2px solid #1588C3;
 padding: 30px 0px;
