--- a/app/views/home/_slider.html.haml
+++ b/app/views/home/_slider.html.haml
@@ -6,9 +6,9 @@
       = link_to "", "#", :class => :point3
       = link_to "", "#", :class => :point4
       = image_tag "blueprint.png"
-    %h1{"data-action" => whereami, "data-index" => "1", "data-content" => "e"}
+    %h1{editable("slide1 title")}
       FROM IDEA TO EXECUTION
-    %p{"data-action" => whereami, "data-index" => "2", "data-content" => "e"}
+    %p{editable("slide1 description")}
       Here at Coshx we take complex problems and turn them into simple solutions.
       %br/
       Our highly skilled team of programmers and designers will take your product to the next level.
