--- a/app/views/home/services.html.haml
+++ b/app/views/home/services.html.haml
@@ -33,28 +33,28 @@
         .icon.agile-icon
 
     .ten.columns.mobile-three
-      %h5{editable(1)}
-        =content(1)
-      %p{editable(2)}
-        =content(2)
+      %h5{editable("services 11")}
+        =content("services 11")
+      %p{editable("services 12")}
+        =content("services 12")
   .row
     .two.columns.mobile-one
       %a.circle
         .icon.ruby-icon
     .ten.columns.mobile-three
-      %h5{editable(3)}
-        =content(3)
-      %p{editable(4)}
-        =content(4)
+      %h5{editable("services 13")}
+        =content("services 13")
+      %p{editable("services 14")}
+        =content("services 14")
   .row
     .two.columns.mobile-one
       %a.circle
         .icon.test-driven-icon
     .ten.columns.mobile-three
-      %h5{editable(5)}
-        =content(5)
-      %p{editable(6)}
-        =content(6)
+      %h5{editable("services 15")}
+        =content("services 15")
+      %p{editable("services 16")}
+        =content("services 16")
     
 
 .row
@@ -67,28 +67,28 @@
       %a.circle
         .icon.design-small-icon
     .ten.columns.mobile-three
-      %h5{editable(7)}
-        =content(7)      
-      %p{editable(8)}
-        =content(8)
+      %h5{editable("services 21")}
+        =content("services 21")      
+      %p{editable("services 22")}
+        =content("services 22")
   .row
     .two.columns.mobile-one
       %a.circle
         .icon.global-icon
     .ten.columns.mobile-three
-      %h5{editable(9)}
-        =content(9)      
-      %p{editable(10)}
-        =content(10)
+      %h5{editable("services 23")}
+        =content("services 23")      
+      %p{editable("services 24")}
+        =content("services 24")
   .row
     .two.columns.mobile-one
       %a.circle
         .icon.access-icon
     .ten.columns.mobile-three
-      %h5{editable(11)}
-        =content(11)
-      %p{editable(12)}
-        =content(12)
+      %h5{editable("services 25")}
+        =content("services 25")
+      %p{editable("services 26")}
+        =content("services 26")
 
 
 = render 'get_a_proposal'
