--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -1,6 +1,6 @@
 %section#about-us
-  %h1.formula About Us
-  %p We're a distributed team of people passionate about software. Here's a little more about each of us.
+  %h1.formula{editable("about page title")} About Us
+  %p{editable("about page text")} We're a distributed team of people passionate about software. Here's a little more about each of us.
 
   #about-stats.row
     %ul.team
