--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -28,7 +28,8 @@
         Loading tweets, just a moment...
       = link_to "https://www.twitter.com/coshxlabs", :class => "a-button darkblue" do
         Follow Us
-    %h2.contact-heading{editable("conact heading")} ONLY ONE THING LEFT TO DO. CONTACT US USING YOUR PREFERRED METHOD BELOW.
+    %h2.contact-heading{editable("conact heading")}
+      =content("contact heading")
     %div.contact-details.row
       .three.columns
         %strong Tel:
