--- a/app/views/projects/_list.html.haml
+++ b/app/views/projects/_list.html.haml
@@ -1,7 +1,7 @@
 %section#featured-projects
   %header.divider
     %h2 Featured Projects
-    = link_to "#", :class => "a-button" do
+    = link_to "#", :class => "a-button show-on-desktops" do
       See More Case Studies
 
 %div.featured_projects.row
