--- a/app/views/home/contact_us.html.haml
+++ b/app/views/home/contact_us.html.haml
@@ -1,6 +1,8 @@
 
-%h1.centre{editable("contact page title")} DONT BE SHY, SAY HELLO
-%p.graytext.centre{editable("contact page text")} Let's start up a conversation about what you need and how we can help. We're just a quick email away!
+%h1.centre{editable("contact page title")}
+  =content("contact page title")
+%p.graytext.centre{editable("contact page text")}
+  =content("contact page text")
 
 .short-white-line
 
