content editable improvements

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -28,7 +28,7 @@
         Loading tweets, just a moment...
       = link_to "https://www.twitter.com/coshxlabs", :class => "a-button darkblue" do
         Follow Us
-    %h2.contact-heading{editable("conact heading")}
+    %h2.contact-heading{editable("contact heading")}
       =content("contact heading")
     %div.contact-details.row
       .three.columns
