--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -145,6 +145,46 @@ color: white;
 text-transform: uppercase;
 padding:25px 0px 25px 50px;
 background: url(star.png) no-repeat 0px 20px;
+position:relative;
+
+.a-button {
+position:absolute;
+right:5px;
+top:20px;
+}
+
+}
+
+@media only screen and (max-width: 767px) {
+.star-header {
+padding:25px 0px 25px 90px;
+background: url(star.png) no-repeat 30px 20px;
+
+.a-button {
+width:auto !important;
+}
+
+
+}
+
+}
+
+
+@media only screen and (max-width: 500px) {
+.star-header {
+padding:70px 0px 25px 0px;
+background: url(star.png) no-repeat center 20px;
+text-align:center;
+
+
+.a-button {
+position:static;
+width:90% !important;
+margin-top:20px;
+}
+
+}
+
 }
 
 .services {
