--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -540,9 +540,9 @@ h1.formula{
 }
 
 section#about-us p{
-	font: 18px 'Droid Serif', serif;
+	/*font: 18px 'Droid Serif', serif;
 	color: #b2b2b2;
-	margin: 30px 0px;
+	margin: 30px 0px;*/
 }
 
 #about-stats{
