--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -4,85 +4,94 @@
   %p{editable("about page text")}
     =content("about page text")
 
-  #about-stats.row
-    %ul.team
-      %li.coffee
-        %img{:alt => "", :src => "/assets/coffee.png"}
-        %h3 Coffee consumed
-        %h2 1,978
-        %p cups this year
-      %li.tracks
-        %img{:alt => "", :src => "/assets/headphones.png"}
-        %h3 Tracks played
-        %h2 3,645
-        %p
-          %a.html{:href => "http://turntable.fm/salad_labs"} http://turntable.fm/salad_labs
-      %li.food
-        %img{:alt => "", :src => "/assets/food.png"}
-        %h3 Favorite food
-        %h2 39
-        %p Thai-food orders this year
-
-    %ul.social
-      %li.git
-        %h3
-          Github:
-          %br
-          Code committed in KB
-        %h2 8,124,305
-      %li.rails
-        %h3
-          Ruby on rails:
-          %br
-          Experience in days
-        %h2 30,456
-      %li.tweets
-        %h3
-          Twitter:
-          %br
-          Total tweets
-        %h2 542
-      %li.blog
-        %h3
-          Blog:
-          %br
-          Total number
-        %h2 #{Post.all.count}
-      %li.lunch
-        %h3
-          Techlunch:
-          %a.techlunch{:href => "#"}>
-            =image_tag("circle-add.png", :mouseover => "circle-add-white.png")
-          %br
-          Total number
-        %h2 14
-      %li.ideas
-        %h3
-          Ideas & creativity:
-          %br
-          Total number:
-        =image_tag "formula.png"
-    #about-us-arrow
-
-
-  %section#team
-    %ul
-      - @coshx_folks.each_with_index do |person, i|
-        %li
-          %a{:href => person.url}
-            .portrait
-
-            %div(style="width:180px;height:180px;background:url(#{Gravatar.new(person.email).image_url(:size => 180)});border-radius:100px;")
-            
-            %p
-              = person.name
-      %li.last
-        %a{:href => "#"} 
-          .new
-          = image_tag("team/new.png", :mouseover => "team/new-white.png")
+  .about-stats.hide-for-small
+    .row.big-icons
+      .four.columns
+        .coffee
+          %img{:alt => "", :src => "/assets/coffee.png"}
+          %h3 Coffee consumed
+          %h2 1,978
+          %p cups this year
+      .four.columns
+        .tracks.b
+          %img{:alt => "", :src => "/assets/headphones.png"}
+          %h3 Tracks played
+          %h2 3,645
           %p
-            You?
-    
+            %a.html{:href => "http://turntable.fm/salad_labs"} http://turntable.fm/salad_labs
+      .four.columns
+        .food.b
+          %img{:alt => "", :src => "/assets/food.png"}
+          %h3 Favorite food
+          %h2 39
+          %p Thai-food orders this year
+
+
+
+
+    .row.small-icons
+      .twelve.columns
+        .git
+          %h3
+            Github:
+            %br
+            Code committed in KB
+          %h2 8,124,305
+        .rails.b
+          %h3
+            Ruby on rails:
+            %br
+            Experience in days
+          %h2 30,456
+        .tweets.b
+          %h3
+            Twitter:
+            %br
+            Total tweets
+          %h2 542
+        .blog.b
+          %h3
+            Blog:
+            %br
+            Total number
+          %h2 #{Post.all.count}
+        .lunch.b
+          %h3
+            Techlunch:
+            %a.techlunch{:href => "#"}>
+              =image_tag("circle-add.png", :mouseover => "circle-add-white.png")
+            %br
+            Total number
+          %h2 14
+        .ideas.b
+          %h3
+            Ideas & creativity:
+            %br
+            Total number:
+          =image_tag "formula.png"
+
+                    
+
+
+
+%section#team
+  %ul
+    - @coshx_folks.each_with_index do |person, i|
+      %li
+        %a{:href => person.url}
+          .portrait
+
+          %div(style="width:180px;height:180px;background:url(#{Gravatar.new(person.email).image_url(:size => 180)});border-radius:100px;")
+          
+          %p
+            = person.name
+    %li.last
+      %a{:href => "#"} 
+        .new
+        = image_tag("team/new.png", :mouseover => "team/new-white.png")
+        %p
+          You?
+  
   %section#testimonials.row
     %header.divider
       %h2 Testimonials
