viewport settings for iPhone

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     = render "layouts/fonts"
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
-    %meta(content="width=device-width;maximum-scale=1.0;minimum-scale=1.0;" name="viewport")/
+    %meta(content="width=device-width;maximum-scale=1.0;minimum-scale=1.0;initial-scale=1.0;" name="viewport")/
     = csrf_meta_tags
     = render "layouts/google_analytics"
     = render "layouts/disqus_dev_mode" if Rails.env.development? || Rails.env.test?
