--- a/app/views/home/_get_a_proposal.html.haml
+++ b/app/views/home/_get_a_proposal.html.haml
@@ -2,4 +2,4 @@
   %p.graytext{editable("proposal_text")}
     =content("proposal_text")
   
-  =link_to "Get a proposal", "/contact#quote", :class => 'a-button'
+  =link_to "Get a proposal", "/contact#quote", :class => 'the-button'
