--- a/app/views/quotes/_random_quote.html.haml
+++ b/app/views/quotes/_random_quote.html.haml
@@ -1,7 +1,6 @@
-%ul.random_quote
-  %li.selected
-    %p "#{random_quote.text}"
-    .author
-      %img{:alt => "", :src => "/assets/lex.png"}/
-      #{random_quote.author}
+.random_quote
+  .graytext=random_quote.text
+  .author
+    %img{:alt => "", :src => "/assets/lex.png"}/
+    #{random_quote.author}
 
