--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -78,5 +78,46 @@ padding-bottom:50px;
   }
 }
 
+.about-us-avatar {
+display:block;
+width:180px;
+height:180px;
+border-radius:100px;
+border:6px solid white;
 
+	  -webkit-transition: all 0.3s ease-out;  /* Safari 3.2+, Chrome */
+     -moz-transition: all 0.3s ease-out;  /* Firefox 4-15 */
+       -o-transition: all 0.3s ease-out;  /* Opera 10.5–12.00 */
+          transition: all 0.3s ease-out;  /* Firefox 16+, Opera 12.50+ */
+
+
+
+
+
+
+
+&:hover {
+border:6px solid #1588c3;		
+
+}
+
+p {
+position:absolute;
+bottom:-60px;
+text-align:center;
+width:100%;
+}
+
+}
+
+.random_quote {
+min-height:150px;
+div {
+margin:45px auto;
+&:first-child {
+margin-top:70px !important;
+}
+text-align:center;
+}
+}
 
