6tangle hover and service icons

--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -55,6 +55,7 @@ height:163px;
 margin-left:-67px;
 margin-top:-81px;
  &:hover {
+  background-position: -141px 0;
   .icon {
   background-position-x:-70px;
   }
