code highlighting background color change

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -495,3 +495,7 @@ background: image-url("footer_tag.png");
 .highlight {
 background: black !important;
 }
+
+code {
+background:black !important;
+}
