tweaking blogs and css for it

--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -41,3 +41,14 @@ section.primary {
 
     }
 }
+
+.edit-link a {
+display:block !important;
+border:none !important;
+padding-bottom: 150px;
+content: ' ';
+font-size:11px !important;
+}
+
+
+
