Use new confirmation dialog syntax

--- a/app/views/clients/index.html.haml
+++ b/app/views/clients/index.html.haml
@@ -14,7 +14,7 @@
       %td= client.company_logo
       %td= link_to 'Show', client
       %td= link_to 'Edit', edit_client_path(client)
-      %td= link_to 'Destroy', client, :confirm => 'Are you sure?', :method => :delete
+      %td= link_to 'Destroy', client, :data => {:confirm => 'Are you sure?'}, :method => :delete
 
 %br
 
