--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -16,7 +16,7 @@
       %td= content.value
       %td= link_to 'Show', content
       %td= link_to 'Edit', edit_content_path(content)
-      %td= link_to 'Destroy', content, :confirm => 'Are you sure?', :method => :delete
+      %td= link_to 'Destroy', content, :data => {:confirm => 'Are you sure?'}, :method => :delete
 
 %br
 
